@@ -54,6 +54,9 @@ def register():
         TimeDefault,
         TimeRequired,
         TimeFormat,
+        TimeDelta,
+        TimeDeltaDefault,
+        TimeDeltaRequired,
         One2One,
         One2OneTarget,
         One2OneRelation,
