@@ -1,3 +1,5 @@
+* Remove float_time widget
+* Add TimeDelta field
 * search_global yields record instead of id
 * Add ModelTestCase
 * Add test for missing default model access
